# w4c-fsm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
boost/: preprocessor.hpp
w4c-fsm/: FSM.h  Variant.h
w4c-fsm/_details/: FSM_footer.inl  FSM_header.inl
